--- a/editor.html
+++ b/editor.html
@@ -75,6 +75,7 @@
               <button class="tool-button tool-tile" data-tool="iso-line" type="button">Line</button>
               <button class="tool-button tool-tile" data-tool="polyline" type="button">Continus line</button>
               <button class="tool-button tool-tile" data-tool="measure" type="button">Measure</button>
+              <button class="tool-button tool-tile" data-tool="fill" type="button">Fill</button>
               <button class="tool-button tool-tile" data-tool="erase" type="button">Erase</button>
             </div>
             <div class="tool-actions">
@@ -93,6 +94,8 @@
             <div class="swatch-grid" id="style-swatches" aria-label="Quick paint swatches"></div>
             <div class="recent-colors"><label>Recent</label><div class="recent-row" id="recent-row"></div></div>
             <label class="field-block" for="stroke-width-input"><span>Stroke width</span><select id="stroke-width-input" class="style-select"><option value="1">1</option><option value="2" selected>2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select></label>
+            <label class="field-inline" for="fill-color-picker"><span>Fill color</span><input id="fill-color-picker" type="color" value="#4aa3ff" /></label>
+            <label class="field-block" for="fill-opacity-input"><span>Fill opacity <span id="fill-opacity-display">1.00</span></span><input id="fill-opacity-input" class="range-input" type="range" min="0" max="1" step="0.01" value="1" /></label>
           </section>
         </aside>
 
