Replace raster flood fill with vector polygon fills

--- a/editor.html
+++ b/editor.html
@@ -81,6 +81,7 @@
             <div class="tool-actions">
               <button class="tool-button" id="undo-btn" type="button">Undo</button>
               <button class="tool-button" id="redo-btn" type="button">Redo</button>
+              <button class="tool-button" id="close-shape-btn" type="button">Close Shape (C)</button>
             </div>
             <div class="selection-count" id="selection-count"></div>
             <label class="field-block" for="erase-mode-toggle"><span>Erase mode</span><button id="erase-mode-toggle" class="style-select" type="button">Erase: Object</button></label>
