Fix fill/close-shape polygon source and add debug polygon outlines

--- a/editor.html
+++ b/editor.html
@@ -61,6 +61,7 @@
               <label class="menu-row"><input id="snap-grid-toggle" type="checkbox" checked />Snap to grid</label>
               <label class="menu-row"><input id="snap-mid-toggle" type="checkbox" checked />Snap to midpoint</label>
               <label class="menu-row"><input id="debug-snap-toggle" type="checkbox" />Debug snap</label>
+              <label class="menu-row"><input id="debug-polygons-toggle" type="checkbox" />Debug polygons</label>
             </div>
           </div>
         </div>
