Fix planar face detection and region fill targeting

--- a/editor.html
+++ b/editor.html
@@ -62,6 +62,7 @@
               <label class="menu-row"><input id="snap-mid-toggle" type="checkbox" checked />Snap to midpoint</label>
               <label class="menu-row"><input id="debug-snap-toggle" type="checkbox" />Debug snap</label>
               <label class="menu-row"><input id="debug-polygons-toggle" type="checkbox" />Debug polygons</label>
+              <label class="menu-row"><input id="debug-regions-toggle" type="checkbox" />Debug regions</label>
             </div>
           </div>
         </div>
