Add manual region-to-face conversion with face selection support

--- a/editor.html
+++ b/editor.html
@@ -124,6 +124,13 @@
         <button id="selection-delete-btn" class="menu-link-btn" type="button">Delete</button>
         <button id="selection-group-btn" class="menu-link-btn" type="button">Group</button>
         <button id="selection-ungroup-btn" class="menu-link-btn" type="button">Ungroup</button>
+        <button id="selection-z-front-btn" class="menu-link-btn" type="button">Front</button>
+        <button id="selection-z-forward-btn" class="menu-link-btn" type="button">Forward</button>
+        <button id="selection-z-backward-btn" class="menu-link-btn" type="button">Backward</button>
+        <button id="selection-z-back-btn" class="menu-link-btn" type="button">Back</button>
+        <button id="region-select-toggle-btn" class="menu-link-btn" type="button">Region Select: OFF</button>
+        <button id="region-convert-face-btn" class="menu-link-btn" type="button" hidden>Convert to Face</button>
+        <button id="region-clear-selection-btn" class="menu-link-btn" type="button" hidden>Clear Region Selection</button>
       </div>
     </div>
 
