Add selection-based Make Object workflow with face capture

--- a/editor.html
+++ b/editor.html
@@ -123,6 +123,7 @@
         <button id="selection-clear-btn" class="menu-link-btn" type="button">Clear</button>
         <button id="selection-delete-btn" class="menu-link-btn" type="button">Delete</button>
         <button id="selection-group-btn" class="menu-link-btn" type="button">Group</button>
+        <button id="selection-make-object-btn" class="menu-link-btn" type="button">Make Object</button>
         <button id="selection-ungroup-btn" class="menu-link-btn" type="button">Ungroup</button>
         <button id="selection-z-front-btn" class="menu-link-btn" type="button">Front</button>
         <button id="selection-z-forward-btn" class="menu-link-btn" type="button">Forward</button>
