--- a/editor.html
+++ b/editor.html
@@ -120,6 +120,7 @@
       <label class="selection-bar-keep"><input id="selection-keep-checkbox" type="checkbox" /> Keep selecting</label>
       <div class="selection-bar-actions">
         <button id="selection-group-btn" class="menu-link-btn" type="button">Group</button>
+        <button id="selection-make-face-btn" class="menu-link-btn" type="button" hidden>Make Face</button>
       </div>
     </div>
 
