Add full delete cascade and robust panel close state

--- a/editor.html
+++ b/editor.html
@@ -63,6 +63,7 @@
               <label class="menu-row"><input id="debug-snap-toggle" type="checkbox" />Debug snap</label>
               <label class="menu-row"><input id="debug-polygons-toggle" type="checkbox" />Debug polygons</label>
               <label class="menu-row"><input id="debug-regions-toggle" type="checkbox" />Debug regions</label>
+              <label class="menu-row"><input id="debug-selection-drag-toggle" type="checkbox" />Debug selection/drag</label>
             </div>
           </div>
         </div>
