Re-enable grouping and fill behind targeted feature flags

--- a/editor.html
+++ b/editor.html
@@ -115,7 +115,7 @@
       <div class="selection-bar-actions">
         <button id="selection-done-btn" class="menu-link-btn" type="button">Done</button>
         <button id="selection-delete-btn" class="menu-link-btn" type="button">Delete</button>
-        <button id="selection-group-btn" class="menu-link-btn" type="button">Group</button>
+        <button id="btnGroup" class="menu-link-btn" type="button">Group</button>
       </div>
     </div>
 
