Fix onboarding overlay fallback visibility and bust static cache

--- a/editor.html
+++ b/editor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blueprint Builder Editor</title>
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.css?v=2" />
   </head>
   <body>
     <div class="app">
@@ -145,6 +145,6 @@
       <button id="z-order-back-btn" class="z-order-context-item" type="button">Send to Back</button>
     </div>
 
-    <script type="module" src="./src/script.js"></script>
+    <script type="module" src="./src/script.js?v=2"></script>
   </body>
 </html>
