--- a/editor.html
+++ b/editor.html
@@ -52,9 +52,9 @@
           <div class="menu-dropdown" id="menuSettingsDropdown" role="menu" aria-label="Settings menu" data-open="false">
             <div class="menu-section">
               <div class="panel-header"><div class="menu-title">Options</div><button type="button" class="panel-close-btn" id="menu-settings-close-btn" aria-label="Close Settings menu">×</button></div>
-              <button class="menu-row menu-row-button" id="measurement-mode-toggle" type="button">Measurements: SMART</button>
+              <button class="menu-row menu-row-button" id="measurement-mode-toggle" type="button">Measurement mode: SMART</button>
               <label class="menu-row"><input id="show-grid-units-toggle" type="checkbox" />Show grid units</label>
-              <label class="menu-row"><input id="continue-polyline-toggle" type="checkbox" checked />Continus line</label>
+              <label class="menu-row"><input id="continue-polyline-toggle" type="checkbox" checked />Continue polyline</label>
             </div>
             <div class="menu-section">
               <div class="menu-title">Snapping</div>
@@ -73,10 +73,11 @@
         <aside class="sidebar" aria-label="Editor controls">
           <section class="side-section" aria-label="Drawing tools">
             <h2 class="section-title">Tool Grid</h2>
+            <button class="tool-button" id="tool-help-btn" type="button" aria-label="Open tool shortcut help">Tool Help</button>
             <div class="tool-grid">
               <button class="tool-button tool-tile" data-tool="select" type="button">Select</button>
               <button class="tool-button tool-tile" data-tool="iso-line" type="button">Line</button>
-              <button class="tool-button tool-tile" data-tool="polyline" type="button">Continus line</button>
+              <button class="tool-button tool-tile" data-tool="polyline" type="button">Polyline</button>
               <button class="tool-button tool-tile" data-tool="measure" type="button">Measure</button>
               <button class="tool-button tool-tile" data-tool="fill" type="button">Fill</button>
               <button class="tool-button tool-tile" data-tool="erase" type="button">Erase</button>
@@ -104,7 +105,7 @@
 
         <div class="canvas-wrap">
           <canvas id="canvas"></canvas>
-          <div class="status" id="status">Mode: ISO</div>
+          <div class="status" id="status">Mode: ISO | Tool: Select</div>
         </div>
       </div>
     </div>
@@ -126,6 +127,14 @@
       <button id="z-order-forward-btn" class="z-order-context-item" type="button">Bring Forward</button>
       <button id="z-order-backward-btn" class="z-order-context-item" type="button">Send Backward</button>
       <button id="z-order-back-btn" class="z-order-context-item" type="button">Send to Back</button>
+    </div>
+
+
+    <div class="help-modal-backdrop" id="help-modal-backdrop" hidden>
+      <div class="help-modal" role="dialog" aria-modal="true" aria-labelledby="help-modal-title">
+        <div class="panel-header"><div class="menu-title" id="help-modal-title">Tool Shortcuts</div><button type="button" class="panel-close-btn" id="help-modal-close-btn" aria-label="Close tool shortcut help">×</button></div>
+        <div id="help-modal-content"></div>
+      </div>
     </div>
 
     <script type="module" src="./src/script.js"></script>
