--- a/editor.html
+++ b/editor.html
@@ -81,14 +81,14 @@
               <button class="tool-button tool-tile" data-tool="polyline" type="button">Polyline</button>
               <button class="tool-button tool-tile" data-tool="measure" type="button">Measure</button>
               <button class="tool-button tool-tile" data-tool="fill" type="button">Fill</button>
-              <button class="tool-button tool-tile" data-tool="erase" type="button">Erase</button>
+              <button class="tool-button tool-tile" data-tool="erase" type="button" title="Click = whole object, Drag = partial line erase">Erase</button>
             </div>
             <div class="tool-actions">
               <button class="tool-button" id="undo-btn" type="button">Undo</button>
               <button class="tool-button" id="redo-btn" type="button">Redo</button>
             </div>
             <div class="selection-count" id="selection-count"></div>
-            <label class="field-block" for="erase-mode-toggle"><span>Erase mode</span><button id="erase-mode-toggle" class="style-select" type="button">Erase: Object</button></label>
+            <label class="field-block" for="erase-mode-toggle"><span>Erase mode <small>(Click = whole object, Drag = partial line erase)</small></span><button id="erase-mode-toggle" class="style-select" type="button">Erase: Object</button></label>
             <label class="field-block" for="eraser-size-input"><span>Eraser size <span id="eraser-size-display">16px</span></span><input id="eraser-size-input" class="range-input" type="range" min="6" max="40" step="1" value="16" /></label>
           </section>
 
