Add explicit Save color action for color picker

--- a/editor.html
+++ b/editor.html
@@ -96,6 +96,7 @@
             <h2 class="section-title">Line Style</h2>
             <div class="recent-colors-row">
               <input id="fill-color-picker" type="color" value="#4aa3ff" aria-label="Choose color" />
+              <button class="tool-button save-color-button" id="save-color-button" type="button">Save color</button>
               <div class="recent-row" id="recent-row"></div>
             </div>
             <label class="field-block" for="stroke-width-input"><span>Stroke width</span><select id="stroke-width-input" class="style-select"><option value="1">1</option><option value="2" selected>2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select></label>
