--- a/editor.html
+++ b/editor.html
@@ -129,6 +129,7 @@
     <div id="selection-bar" class="selection-bar" hidden>
       <div id="selection-bar-count" class="selection-bar-count">Selection (0)</div>
       <label class="selection-bar-keep"><input id="selection-keep-checkbox" type="checkbox" /> Keep selecting</label>
+      <label class="selection-bar-keep"><input id="selection-include-faces-checkbox" type="checkbox" /> Include enclosed faces</label>
       <div class="selection-bar-actions">
         <button id="selection-done-btn" class="menu-link-btn" type="button">Done</button>
         <button id="selection-delete-btn" class="menu-link-btn" type="button">Delete</button>
