--- a/editor.html
+++ b/editor.html
@@ -133,6 +133,7 @@
       <div class="selection-bar-actions">
         <button id="selection-done-btn" class="menu-link-btn" type="button">Done</button>
         <button id="selection-delete-btn" class="menu-link-btn" type="button">Delete</button>
+        <button id="duplicate-selection-btn" class="menu-link-btn" type="button">Duplicate</button>
         <button id="btnGroup" class="menu-link-btn" type="button">Group</button>
       </div>
     </div>
