Add selection duplication wiring and adjacent root insertion

--- a/editor.html
+++ b/editor.html
@@ -141,6 +141,7 @@
 
     <div id="z-order-context-menu" class="z-order-context-menu" hidden>
       <div class="panel-header panel-header--menu"><div class="menu-title">Arrange</div><button type="button" class="panel-close-btn" id="z-order-menu-close-btn" aria-label="Close arrange menu">×</button></div>
+      <button id="z-order-duplicate-btn" class="z-order-context-item" type="button">Duplicate</button>
       <button id="z-order-front-btn" class="z-order-context-item" type="button">Bring to Front</button>
       <button id="z-order-forward-btn" class="z-order-context-item" type="button">Bring Forward</button>
       <button id="z-order-backward-btn" class="z-order-context-item" type="button">Send Backward</button>
